imeplementacao em java 22